August_30/August_30/src/objects/TC_Notifications__c.object
<CustomObject>
    <fields>
        <fullName>Alternative_Text__c</fullName>
        <label>Alternative Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>It will hold the actual notification description</description>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dedicated_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Notifications actually belongs to which user</description>
        <label>Dedicated To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Header_Description__c</fullName>
        <label>Header Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Href__c</fullName>
        <label>Href</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <description>it will hold the Published date of the notification</description>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Read__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will hold the boolean value whether the customer read the notification or not .</description>
        <label>Read?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_till__c</fullName>
        <label>Valid till?</label>
        <type>DateTime</type>
    </fields>
    <description>S-00006- It will hold the all the notifications pertains to the Customer Account</description>
    <label>Notification</label>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Notifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Personal_Notification</fullName>
        <active>true</active>
        <description>This record type is used to store personal notification record</description>
        <label>Personal Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Public_Notification</fullName>
        <active>true</active>
        <description>This record type is used to store public notification record</description>
        <label>Public Notification</label>
    </recordTypes>
</CustomObject>